--- a/html/Maintenance/Charging.html
+++ b/html/Maintenance/Charging.html
@@ -1,5 +1,9 @@
 <p>The charging system should include electronic scales and a charging station.</p>
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
+<figure>
+    <img class="imageCentered_3x2" src="img/img_AirConditionerChargingStation.png">
+    <figcaption class="centerText">Air Conditioner Charging Station</figcaption>
+</figure>
+
 <div class="boxCautionSmall">
     <p class="boxCautionSmallHeader">CAUTION</p>
     <p class="boxCautionSmallText">Never open the high side service valve with the system running.</p>
