--- a/html/Maintenance/Diagnosis of Compressor Failure.html
+++ b/html/Maintenance/Diagnosis of Compressor Failure.html
@@ -10,7 +10,11 @@
         <p>Compressors which bind or hang during the shaft rotation test have an internal part which is broken or
             contamination
             preventing compressor operation. This compressor should be removed and replaced with a new unit.</p>
-        <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
+        <figure>
+            <img class="imageCentered_3x2" src="img/img_AirConditionerCompressorRotationCheck.png">
+            <figcaption class="centerText">Compressor Rotation Check</figcaption>
+        </figure>
+            
     </li>
     <li>Clutch Inspection
         <ol type="a">
@@ -27,7 +31,11 @@
                 <p>Air gaps exceeding 0.051” (1.3 mm) can prevent engagement. This often is noticed after the clutch and
                     compressor
                     temperature is heated through normal use.</p>
-                <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
+                    <figure>
+                        <img class="imageCentered_3x2" src="img/img_AirConditionerClutchAirGapCheck.png">
+                        <figcaption class="centerText">Clutch Air Gap Check</figcaption>
+                    </figure>
+                
             </li>
             <li>Resistance Check
                 <p>Field coils with internal shorts can be tested by measuring resistance across the field coil. Resistance should fall
