--- a/html/Maintenance/Oiling.html
+++ b/html/Maintenance/Oiling.html
@@ -32,11 +32,8 @@
 
 <p class="dontBreakAfter"><b>Flushed System or New Systems</b></p>
 <p>Systems which have no oil in them due to flushing or the system is being built from new components will require oil
-    amounts in accordance with the oil charging section requirements in this manual. </p>
-<p>The factory oil charge for the compressor can be found on the compressor label. For total system required oil
-    amount, see Section 2C, System Requirements. Also see oil charging section of this manual for additional
-    information. </p>
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
+    amounts in accordance with <xref fileTarget="html/Maintenance/Approved Oil and Refrigerants.html" xrefType="link", prependLabel="Section"></xref>.</p>
+
 
 
 <p class="dontBreakAfter"><b>Compressor Swap, No Flushing</p></b>
@@ -46,11 +43,20 @@
     <li>Remove the oil plug from the failed compressor and drain as much oil as possible into a suitable container.</li>
     <li>Drain oil from the suction and discharge ports into a suitable container while turning the shaft clockwise only
         with a socket wrench on the armature retaining nut.
-        <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
+        
+        <figure>
+            <img class="imageCentered_3x2" src="img/img_AirCondionerCompressorDraining.png">
+            <figcaption class="centerText">Draining Oil from Compressor</figcaption>
+        </figure>
     </li>
     <li>Measure and record the amount of oil drained from the compressor.</li>
     <li>Drain oil from the new compressor.</li>
-    <li>Add oil back into the new compressor in an amount equal to that drained from the old compressor.</li>
+    <li>Add oil back into the new compressor in an amount equal to that drained from the old compressor.
+        <figure>
+            <img class="imageCentered_3x2" src="img/img_AirConditionerAddingOilToCompressor.png">
+            <figcaption class="centerText">Adding Oil to Compressor</figcaption>
+        </figure>
+    </li>
     <li>Re-install oil plug. Seal and O-ring must be clean and not damaged. Torque to 11-15 ft•lb. Be careful not to
         cross thread the oil plug.</li>
 </ol>
