--- a/html/Maintenance/Contamination Check.html
+++ b/html/Maintenance/Contamination Check.html
@@ -1,8 +1,17 @@
 <p>Contamination from foreign material can be found by looking at the oil drained from either the compressor or the
     suction and discharge lines. Contamination can also be seen collecting in the orifice tube or expansion valve.</p>
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-<img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
+<figure>
+    <img class="imageCentered_5x2" src="img/img_AirConditionerContaminatedOil.png">
+    <figcaption class="centerText">Contaminated Air Conditioner Oil</figcaption>
+</figure>
+
+
 <p>To illustrate how contamination will quickly wreck a good compressor, the photo to the right shows a small metal
     shaving lodged under the discharge valve. The valve will open and close against the metal shaving resulting in a
     fatigue break of the valve. The broken valve is now free to travel inside the compressor causing additional internal
     failures. Eventually the compressor will stop pumping and over heat. </p>
+
+<figure>
+    <img class="imageCentered_3x2" src="img/img_AirConditionerShavingInCompressor.png">
+    <figcaption class="centerText">Contamination in Compressor</figcaption>
+</figure>
