curly quote fix

--- a/html/Maintenance/Lifting and Jacking.html
+++ b/html/Maintenance/Lifting and Jacking.html
@@ -1,4 +1,4 @@
-<div class="boxCautionLarge’>
+<div class="boxCautionLarge">
     <p class="boxCautionLargeHeader">CAUTION</p>
     <p class="boxCautionLargeText">Care should always be taken when the aircraft is lifted to prevent damage to the aircraft or harm to people near it. The hopper should be EMPTY before jacking.</p>
 </div>
