--- a/html/Maintenance/Lifting and Jacking.html
+++ b/html/Maintenance/Lifting and Jacking.html
@@ -1,6 +1,6 @@
-<div class="boxCautionLarge">
-    <p class="boxCautionLargeHeader">CAUTION</p>
-    <p class="boxCautionLargeText">Care should always be taken when the aircraft is lifted to prevent damage to the aircraft or harm to people near it. The hopper should be EMPTY before jacking.</p>
+<div class="boxCautionMedium">
+    <p class="boxCautionMediumHeader">CAUTION</p>
+    <p class="boxCautionMediumText">Care should always be taken when the aircraft is lifted to prevent damage to the aircraft or harm to people near it. The hopper should be EMPTY before jacking.</p>
 </div>
 
 <p>A jack pad is provided with each aircraft for the main gear. This jack pad is to be used for changing or removing a wheel or tire. To install the jack pad, lay a soft rag on the inside so that it will not chip the paint from the main gear leg and slide the jack pad up the lower end of the main gear leg until it is snug. It will be necessary to remove and replace the lower plastic bands that hold the brake line in place. The band is Tyton T150M-0 and should be stocked as a standard spares item. After the jack pad is in place, install the bolt and nut through the pad flanges with the bolt on the top side of the gear leg. This is to keep the pad from spreading apart and slipping. Use a hydraulic bottle jack on adequate capacity to lift the wheel off the ground. Be sure the tail wheel is locked, and chocks are in place on the other main wheel. The hopper should be empty before jacking. </p>
