added to compass section

--- a/html/Maintenance/Compass Calibration.html
+++ b/html/Maintenance/Compass Calibration.html
@@ -1,4 +1,5 @@
 <div style="background-color:lightblue;">
+    <p>All Air Tractors are equipped with a magnetic wet compass.  Fluid may leak or evaporate.  Periodically check the fluid level to ensure proper operation.</p>
     <p><b>Compass Calibration</b></p>
     <p>Air Tractor suggests performing a magnetic compass calibration, or swing, any time welding is performed on the airplane, especially welding inside the cockpit.</p>
     <p>For detailed instruction on performing a compass swing, refer to FAA Advisory Circular 43-215.</p>
